# AmirOS-rust

./: AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  deny.toml  limine.conf  linker-riscv64.ld  linker-x86_64.ld  riscv64-amir_os.json  rust-toolchain.toml  x86_64-amir_os.json
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  deny.yml  lint.yml
.husky/: pre-commit
.opencode/skills/amiros-kernel-guidelines/: SKILL.md
src/: allocator.rs  heap.rs  main.rs  paging.rs  serial.rs
src/arch/: mod.rs
src/arch/aarch64/: mod.rs  paging.rs
src/arch/loongarch64/: mod.rs  paging.rs
src/arch/riscv64/: mod.rs  paging.rs  trap.rs
src/arch/x86_64/: gdt.rs  idt.rs  mod.rs  paging.rs
src/memory/: allocator.rs  frame.rs  mod.rs  paging.rs  test_allocator.rs  vmm.rs
