[package]
name = "amir_os"
version = "0.1.0"
edition = "2024"

[dependencies]
acpi = "5.2.0"
async-task = { version = "4.7.1", default-features = false }
critical-section = "1.2.0"
either = { version = "1.15.0", default-features = false }
elf = { version = "0.8.0", default-features = false }
free-list = "0.3.1"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
limine = "0.5.0"
local-waker = "0.1.4"
log = "0.4.27"
memory_addr = "0.4.0"
page_table_multiarch = "0.5.5"
slabmalloc = "0.11.0"
spin = "0.10.0"
uart_16550 = "0.4.0"
vte = { version = "0.15.0", default-features = false }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.15.2"

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = "0.14.0"
riscv-rt = "0.15.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "amir_os"
test = false
bench = false

[package.metadata.limage]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
image-path = "target/amir_os/amir_os-x86_64.iso"
