[package]
name = "amir_os"
version = "0.1.0"
edition = "2024"

[dependencies]
acpi = "6.0.1"
async-task = { version = "4.7.1", default-features = false }
bit_field="0.10.3"
critical-section = "1.2.0"
crossbeam = { version = "0.8.4", default-features = false, features = ["alloc"] }
either = { version = "1.15.0", default-features = false }
elf = { version = "0.8.0", default-features = false }
free-list = "0.3.1"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
limine = "0.5.0"
local-waker = "0.1.4"
log = "0.4.27"
meminterval = "0.4.2"
memory_addr = "0.4.0"
page_table_entry = "0.5.7"
page_table_multiarch = "0.5.7"
slab_allocator_rs = "1.0.2"
spin = "0.10.0"
uart_16550 = "0.4.0"
vte = { version = "0.15.0", default-features = false }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.15.4"

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = "0.15.0"
riscv-rt = "0.16.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true

[[bin]]
name = "amir_os"
test = false
bench = false

[package.metadata.limage]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
image-path = "target/amir_os/amir_os-x86_64.iso"
